--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -33,6 +33,11 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# local database files (contains sensitive repo data)
+/data/
+data/
+repos.json
+
 # vercel
 .vercel
 
